org/kermeta/language/org.kermeta.language.checker/src/test/resources/resolved/invalid/Constraint/Constraint_no_call_result/.project
<?xml version="1.0" encoding="UTF-8"?>
<projectDescription>
	<name>Constraint_no_call_result</name>
	<comment></comment>
	<projects>
	</projects>
	<buildSpec>
	</buildSpec>
	<natures>
		<nature>org.kermeta.language.texteditor.eclipse.nature.KermetaNatureID</nature>
	</natures>
</projectDescription>
